Initial cut at jacoco integration for test, integration tests, and sonar use